killed  parentless flavor;move nn/gan to nn/generative; add stable-diffusion to it;final orsys/intra/mle-fiducre.yml

--- a/shared/latex/big-questions/ethics.tex
+++ b/shared/latex/big-questions/ethics.tex
@@ -1,6 +1,19 @@
-\begin{frame}{Prédiction pour la prévention}
-  Grande-Bretagne~: Predpol (abandonné), National Data Analytics Solution (NDAS) en mars 2019.
 
+\begin{frame}{Comité éthique \& intelligence artificielle}
+  Étude \& rapport par la CNIL début 2017. Recommandations~:
+  \begin{itemize}[<+->]
+    \item Former à l’éthique tous les acteurs-maillons de la « chaîne algorithmique » 
+    \item Rendre les systèmes algorithmiques compréhensibles
+    \item Designer les systèmes algorithmiques au service de la liberté humaine
+    \item Constituer une plateforme nationale d’audit des algorithmes
+    \item Encourager la recherche sur l’IA éthique
+    \item Renforcer la fonction éthique au sein des entreprises
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Prédiction pour la prévention}
+  U.S~: \bluelink{https://en.wikipedia.org/wiki/PredPol}{Predpol}, \\
+  Grande-Bretagne, National Data Analytics Solution (NDAS) en mars 2019.
   \V{"img/minorit-report" | image("tw", 0.7)}
 \end{frame}
 
@@ -72,13 +85,19 @@
 
   Prompt~: Kim jong Un resigns
   \begin{quote}
-    Kim jong Un resigns from parliament in North Korea, but does not return to the country after she was sacked last month
+    Kim jong Un resigns from parliament in North Korea, 
+    but does not return to the country after she was sacked last month
       
-    North Korea's top diplomat, Kim Joo Seok, has resigned from parliament amid calls for him to step down as the country's top diplomat after she was sacked last month, a parliament spokesman said.
+    North Korea's top diplomat, Kim Joo Seok, has resigned from parliament amid calls for him
+    to step down as the country's top diplomat after she was sacked last month, 
+    a parliament spokesman said.
     
-    Kim said he would meet with North Korea's national leadership later on Thursday morning to "explain why I did not resign."
+    Kim said he would meet with North Korea's national leadership later on Thursday morning 
+    to "explain why I did not resign."
     
-    North Korea's state news agency claimed the foreign ministry had dismissed Kim as a "foreign agent". Kim was fired by Pyongyang last week after her role in overseeing a meeting with Pyongyang's leader, Kim Jong Un. 
+    North Korea's state news agency claimed the foreign ministry had dismissed Kim as a 
+    "foreign agent". Kim was fired by Pyongyang last week after her role in overseeing 
+    a meeting with Pyongyang's leader, Kim Jong Un. 
     
     [...]
   \end{quote}
@@ -98,4 +117,12 @@
 \begin{frame}{Des solutions éthiques}
   Deepfake :\\ 
   Génération de génomes humains "crédibles" dans l'objectif d'augmenter les données sans passer par des donneurs.
+\end{frame}
+
+
+\begin{frame}{A finir}
+  timnit gebru google virée en 2020\\
+  (antonio cassilli) , travailleurs du clic,notemment pour chatgpt \\
+  journalistes (olivier tesquet, marc ress)\\
+  quadrature du net, EFF\\
 \end{frame}
