--- a/shared/latex/big-questions/legal.tex
+++ b/shared/latex/big-questions/legal.tex
@@ -2,23 +2,73 @@
   \V{"img/logos/cnil" | image("tw", 0.8)}
 \end{frame}
 
-\begin{frame}{Comité éthique \& intelligence artificielle}
-  Étude \& rapport par la CNIL début 2017. Recommandations~:
-  \begin{itemize}[<+->]
-    \item Former à l’éthique tous les acteurs-maillons de la « chaîne algorithmique » 
-    \item Rendre les systèmes algorithmiques compréhensibles
-    \item Designer les systèmes algorithmiques au service de la liberté humaine
-    \item Constituer une plateforme nationale d’audit des algorithmes
-    \item Encourager la recherche sur l’IA éthique
-    \item Renforcer la fonction éthique au sein des entreprises
+\begin{frame}{RGPD}
+  Introduit en 2018 par le parlement européen.\\
+  Le consentement est requis dès que ce n’est pas l’objet principal du service \\
+  \V{"img/logos/rgpd" | image("tw", 0.8)}
+\end{frame}
+
+\begin{frame}{La procédure ordinaire avec RGPD}
+  À l’issue de contrôle ou de plaintes, 
+  en cas de méconnaissance des dispositions du RGPD ou de la loi de la part 
+  des responsables de traitement et des sous-traitants, \\
+  la formation restreinte de la CNIL  peut :
+  \begin{itemize}
+    \item prononcer un rappel à l’ordre
+    \item enjoindre de mettre le traitement en conformité, y compris sous astreinte
+    \item limiter temporairement ou définitivement un traitement
+    \item suspendre les flux de données
+    \item ordonner de satisfaire aux demandes d’exercice des droits des personnes, 
+          y compris sous astreinte
+    \item prononcer une amende administrative
   \end{itemize}
 \end{frame}
 
 \begin{frame}{RGPD}
-  Introduit en 2018 par le parlement européen.
-  \V{"img/logos/rgpd" | image("tw", 0.8)}
+  \begin{itemize}
+    \item amende jusqu’à \bluelink{https://www.cnil.fr/fr/definition/sanction}{4 \% du chiffre d’affaires annuel mondial}
+    \item exception dans le droit français : \bluelink{https://www.cnil.fr/fr/la-loi-informatique-et-libertes\#article80}{La presse, l’art et la littérature} (Ex: Refus des cookies $\rightarrow$ Abonnement pour avoir accès aux contenus)\\
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Loi informatique et liberté, procédure simplifié}
+  En cas de jurisprudence, des sanctions :
+  \begin{itemize}
+    \item moins nombreuses et moins sévères
+    \item ne peuvent jamais être rendues publiques
+  \end{itemize}
+  Dans ce cadre, le président de la formation restreinte de la CNIL peut :
+  \begin{itemize}
+      \item prononcer un rappel à l’ordre 
+      \item enjoindre de mettre le traitement en conformité, 
+            y compris sous astreinte d’un montant maximal de 100 € par jour de retard 
+      \item prononcer une amende administrative d’un montant maximal de 20 000 €
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Délégué à la protection des données (DPO)}
+  Personne désigné par un organisme
+  \begin{itemize}
+    \item relais entre la CNIL, l’organisme et les usagers concernées
+    \item garant du respect de la RGPD (droits d’acces, retractation, ...)
+    \item pilote de la démarche de mise en conformité permanente et dynamique
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Délégué à la protection des données (DPO)}
+  Obligation de désignation pour toute organisation :
+  \begin{itemize}
+    \item publique
+    \item amènée à réaliser un suivi régulier et systématique de personnes à grande échelle
+    \item amènée à traiter à grande échelle des données 
+          \bluelink{https://www.cnil.fr/fr/definition/donnee-sensible}{sensibles} 
+          ou relatives à des condamnations pénales et infractions
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Loi bioéthique}
-  À propos du «~traitement algorithmique de données massives~» pour des «~actes à visée préventive, diagnostique ou thérapeutique~»~: le professionnel de santé sera tenu d'informer le patient «~de cette utilisation et des modalités d’action de ce traitement~».
+  À propos du «~traitement algorithmique de données massives~» pour des 
+  «~actes à visée préventive, diagnostique ou thérapeutique~»~: 
+  le professionnel de santé sera tenu d’informer le patient 
+  «~de cette utilisation et des modalités d’action de ce traitement~».
 \end{frame}
