--- a/orsys/pyi/latex/about/description.tex
+++ b/orsys/pyi/latex/about/description.tex
@@ -1,33 +1,23 @@
 \begin{frame}{Description}
-  \alert{\textbf{A changer dans latex about}}
-  Cette formation présente les \textbf{fondamentaux} de la \textbf{Modélisation Statistique} à travers des travaux pratiques.
+  Cette formation présente les outils permettant de \alert{\textbf{traiter les images en python}} pour la transformation et l'analyse.
 \end{frame}
 
 \begin{frame}{Prérequis}
   \begin{itemize}
-  \item Connaissances de base en statistiques et algèbre
-  \item Connaissances de base en python
+  \item Connaissances et pratique de \textbf{python}
+  \item Connaissance de base de \textbf{numpy}
   \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \bluelink{https://colab.research.google.com/notebooks/welcome.ipynb}{Google Colaboratory}
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Objectifs pédagogiques}
   \begin{itemize}
-  \item Comprendre les principes de la modélisation statistique
-  \item Comprendre les différents types de régressions
-  \item Évaluer les performances d'un algorithme prédictif
-  \item Sélectionner et classer des données dans de grands volumes de données
-  \item Se familiariser avec les librairies scientifiques python (NumPy, seaborn, scikit-learn, ... )
+  \item Approfondir ses connaissances en langage Python
+  \item Réaliser une analyse de données en Machine Learning en Python
+  \item Découvrir des bibliothèques Python de traitement d'image
+  \item Transformer une image
+  \item Extraire des informations d'une image
+
   \end{itemize}
-  En bref, se familiariser avec les concepts et techniques de bases du \og{}Machine Learning\fg
 \end{frame}
 
-\begin{frame}{Programme}
-  \begin{itemize}
-  \item Introduction à la modélisation
-  \item Évaluation de modèles prédictifs
-  \item Les algorithmes supervisés/non-supervisés
-  \item Projection de données par composantes
-  \item Analyse de données textuelles
-  \end{itemize}
-\end{frame}
