Add raise to exception section
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/basics/exceptions.tex
+++ b/shared/latex/python/basics/exceptions.tex
@@ -10,6 +10,10 @@
   \pycon{python/basics/exceptions/try-except}
 \end{frame}
 
+\begin{frame}{Lancer une erreur}
+  \pycon{python/basics/exceptions/raise}
+\end{frame}
+
 \begin{frame}{Définir une erreur personnalisée}
   Peuvent hériter d'\texttt{Exception} ou d'une erreur plus précise.
   \mintedpycode{python/basics/exceptions/custom-exception}
