Fix ethics and legal sections
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/big-questions/ethics.tex
+++ b/shared/latex/big-questions/ethics.tex
@@ -119,10 +119,9 @@
   Génération de génomes humains "crédibles" dans l'objectif d'augmenter les données sans passer par des donneurs.
 \end{frame}
 
-
-\begin{frame}{A finir}
-  timnit gebru google virée en 2020\\
-  (antonio cassilli) , travailleurs du clic,notemment pour chatgpt \\
-  journalistes (olivier tesquet, marc ress)\\
-  quadrature du net, EFF\\
-\end{frame}
+% \begin{frame}{A finir}
+%   timnit gebru google virée en 2020\\
+%   (antonio cassilli) , travailleurs du clic,notemment pour chatgpt \\
+%   journalistes (olivier tesquet, marc ress)\\
+%   quadrature du net, EFF\\
+% \end{frame}
