--- a/shared/latex/big-questions/legal.tex
+++ b/shared/latex/big-questions/legal.tex
@@ -3,9 +3,11 @@
 \end{frame}
 
 \begin{frame}{RGPD}
-  Introduit en 2018 par le parlement européen.\\
-  Le consentement est requis dès que ce n’est pas l’objet principal du service \\
-  \V{"img/logos/rgpd" | image("tw", 0.8)}
+  Introduit en 2016 par le parlement européen, appliqué en 2018.
+
+  Le consentement est requis pour tout traitement qui ne concerne pas l’objet principal du service.
+
+  \V{"img/logos/rgpd" | image("th", 0.5)}
 \end{frame}
 
 \begin{frame}{La procédure ordinaire avec RGPD}
@@ -27,11 +29,11 @@
 \begin{frame}{RGPD}
   \begin{itemize}
     \item amende jusqu’à \bluelink{https://www.cnil.fr/fr/definition/sanction}{4 \% du chiffre d’affaires annuel mondial}
-    \item exception dans le droit français : \bluelink{https://www.cnil.fr/fr/la-loi-informatique-et-libertes\#article80}{La presse, l’art et la littérature} (Ex: Refus des cookies $\rightarrow$ Abonnement pour avoir accès aux contenus)\\
+    \item exception dans le droit français : \bluelink{https://www.cnil.fr/fr/la-loi-informatique-et-libertes\#article80}{la presse, l’art et la littérature} (Ex: refus des cookies $\rightarrow$ abonnement pour avoir accès aux contenus)\\
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Loi informatique et liberté, procédure simplifié}
+\begin{frame}{Loi informatique et liberté, procédure simplifiée}
   En cas de jurisprudence, des sanctions :
   \begin{itemize}
     \item moins nombreuses et moins sévères
@@ -47,20 +49,20 @@
 \end{frame}
 
 \begin{frame}{Délégué à la protection des données (DPO)}
-  Personne désigné par un organisme
+  Personne désignée par un organisme
   \begin{itemize}
-    \item relais entre la CNIL, l’organisme et les usagers concernées
-    \item garant du respect de la RGPD (droits d’acces, retractation, ...)
+    \item relais entre la CNIL, l’organisme et les usagers concernés
+    \item garant du respect de la RGPD (droits d’accès, retractation, ...)
     \item pilote de la démarche de mise en conformité permanente et dynamique
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Délégué à la protection des données (DPO)}
+\begin{frame}{Délégué à la protection des données (DPO) --- Missions}
   Obligation de désignation pour toute organisation :
   \begin{itemize}
     \item publique
-    \item amènée à réaliser un suivi régulier et systématique de personnes à grande échelle
-    \item amènée à traiter à grande échelle des données 
+    \item amenée à réaliser un suivi régulier et systématique de personnes à grande échelle
+    \item amenée à traiter à grande échelle des données 
           \bluelink{https://www.cnil.fr/fr/definition/donnee-sensible}{sensibles} 
           ou relatives à des condamnations pénales et infractions
   \end{itemize}
