Fin de la section scikit-image

--- a/shared/latex/python/image/scikit-image.tex
+++ b/shared/latex/python/image/scikit-image.tex
@@ -1,107 +1,82 @@
+\begin{frame}{Introduction à scikit-image}
+  \begin{itemize}
+    \item Bibliothèque Python pour le traitement d'images.
+    \item Basée sur NumPy et SciPy.
+    \item Comprend de nombreuses fonctionnalités pour le traitement et l'analyse
+          d'images.
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Particularité de scikit-image}
+  Alors que \alert{Pillow} préfère manipuler des images en \texttt{uint8} avec des valeurs de 0 à 255, \alert{scikit-image} préfère manipuler des images en flottants.
+
+  De fait, la plupart des méthodes retournent les images avec des valeurs dans
+  l'intervalle $[0,1]$.
+\end{frame}
+
+\begin{frame}{Chargement d'images}
+  \mintedcustomcode{python/image/skimage-open}{pycon}
+  \V{"img/ravens" | image("tw", 0.5)}
+\end{frame}
+
+\begin{frame}{Changement de format de couleurs}
+  Comme Pillow, scikit-image proposent toutes les méthodes pour changer le mode de couleur de l'image \texttt{rgb2gray}, \texttt{rgb2hsv}, \texttt{rgb2rgba}, etc.
+\end{frame}
+
+\begin{frame}{Changement de format de couleurs}
+  \mintedcustomcode{python/image/skimage-bw}{pycon}
+  \V{"img/ravens-bw" | image("tw", 0.4)}
+\end{frame}
+
+\begin{frame}{Filtres d'image}
+  Les filtres d'images correspondent a des convolutions sur les images. C'est à dire des transfomations locales.
+  
+  Il s'agit de filtres plus académiques dont certains ont un usage très spécifique.
+\end{frame}
+
+\begin{frame}{Filtres d'image : Sobel}
+  \mintedcustomcode{python/image/skimage-sobel}{pycon}
+  \V{"img/ravens-sobel" | image("tw", 0.4)}
+\end{frame}
+
+\begin{frame}{Filtres d'image : Gaussian}
+  \mintedcustomcode{python/image/skimage-Gaussian}{pycon}
+  \V{"img/ravens-gaussian" | image("tw", 0.4)}
+
+  Notez que le filtrage gaussien peut s'appliquer sur une image RGB.
+\end{frame}
+\begin{frame}{Filtres d'image : Hessienne}
+  \mintedcustomcode{python/image/skimage-hessian}{pycon}
+  \V{"img/ravens-hessian" | image("tw", 0.4)}
+\end{frame}
+
+\begin{frame}{Segmentation d'image}
+  \mintedcustomcode{python/image/skimage-segmentation}{pycon}
+  \V{"img/ravens-segm" | image("tw", 0.4)}
+  
+\end{frame}
+
+\begin{frame}{Transformation géométrique}
+  \mintedcustomcode{python/image/skimage-rotation}{pycon}
+  \V{"img/ravens-rotate" | image("tw", 0.4)}
+  
+\end{frame}
+
+\begin{frame}{Métriques d'images}
+  Scikit-image propose une large gamme de métriques pour les images dans le package \texttt{metrics}.
+  \mintedcustomcode{python/image/skimage-metrics}{pycon}
+\end{frame}
+
+\begin{frame}{Analyses avancées}
+  Scikit-image propose une large gamme de fonctions pour les images dans le package \texttt{feature} pour l'extraction et la comparaison de caractéristiques de l'image.
+  \V{"img/ravens-orb" | image("tw", 0.8)}
+\end{frame}
+
 \begin{frame}
-    \frametitle{Introduction à scikit-image}
-    \begin{itemize}
-      \item Bibliothèque Python pour le traitement d'images.
-      \item Basée sur NumPy et SciPy.
-      \item Comprend de nombreuses fonctionnalités pour le traitement et l'analyse d'images.
-    \end{itemize}
-  \end{frame}
-  
-  \begin{frame}
-    \frametitle{Fonctionnalités principales}
-    \begin{enumerate}
-      \item Chargement et affichage d'images.
-      \item Filtres d'image (flou, détection de contours, etc.).
-      \item Segmentation d'image.
-      \item Mesures de forme et d'intensité.
-      \item Transformation géométrique.
-      \item Analyse des régions.
-    \end{enumerate}
-  \end{frame}
-  
-  \begin{frame}[fragile] % Utilisation de l'environnement [fragile] pour minted
-    \frametitle{1. Chargement et affichage d'images}
-    \begin{block}{Exemple de code :}
-      \begin{minted}{python}
-  from skimage import io
-  
-  image = io.imread('image.jpg')
-  io.imshow(image)
-      \end{minted}
-    \end{block}
-  \end{frame}
-  
-  \begin{frame}[fragile]
-    \frametitle{2. Filtres d'image}
-    \begin{block}{Exemple de code :}
-      \begin{minted}{python}
-  from skimage import io, filters
-  
-  image = io.imread('image.jpg')
-  edges = filters.sobel(image)
-  io.imshow(edges)
-      \end{minted}
-    \end{block}
-  \end{frame}
-  
-  \begin{frame}[fragile]
-    \frametitle{3. Segmentation d'image}
-    \begin{block}{Exemple de code :}
-      \begin{minted}{python}
-  from skimage import io, segmentation
-  
-  image = io.imread('image.jpg')
-  labels = segmentation.slic(image, compactness=10)
-  io.imshow(segmentation.mark_boundaries(image, labels))
-      \end{minted}
-    \end{block}
-  \end{frame}
-  
-  \begin{frame}[fragile]
-    \frametitle{4. Mesures de forme et d'intensité}
-    \begin{block}{Exemple de code :}
-      \begin{minted}{python}
-  from skimage import io, color, measure
-  
-  image = io.imread('image.jpg')
-  image_gray = color.rgb2gray(image)
-  label_image = measure.label(image_gray)
-  props = measure.regionprops(label_image)
-      \end{minted}
-    \end{block}
-  \end{frame}
-  
-  \begin{frame}[fragile]
-    \frametitle{5. Transformation géométrique}
-    \begin{block}{Exemple de code :}
-      \begin{minted}{python}
-  from skimage import io, transform
-  
-  image = io.imread('image.jpg')
-  rotated_image = transform.rotate(image, angle=45)
-  io.imshow(rotated_image)
-      \end{minted}
-    \end{block}
-  \end{frame}
-  
-  \begin{frame}[fragile]
-    \frametitle{6. Analyse des régions}
-    \begin{block}{Exemple de code :}
-      \begin{minted}{python}
-  from skimage import io, segmentation, measure
-  
-  image = io.imread('image.jpg')
-  labels = segmentation.slic(image, compactness=10)
-  regions = measure.regionprops(labels)
-      \end{minted}
-    \end{block}
-  \end{frame}
-  
-  \begin{frame}
-    \frametitle{Conclusion}
-    \begin{itemize}
-      \item Scikit-image est une bibliothèque puissante pour le traitement d'images en Python.
-      \item Elle offre de nombreuses fonctionnalités pour répondre à vos besoins en traitement d'images.
-      \item Documentation complète et communauté active.
-    \end{itemize}
-  \end{frame}
+  \frametitle{Conclusion}
+  \begin{itemize}
+    \item Elle offre de nombreuses fonctionnalités pour répondre à différents besoins en traitement d'images
+    \item Librairie souvent réservé à un usage spécialiste du domaine
+    \item Communauté active
+  \end{itemize}
+\end{frame}
