Small fixes from my todo
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/ml/evaluation.tex
+++ b/shared/latex/ml/evaluation.tex
@@ -2,7 +2,7 @@
   \begin{itemize}[<+->]
     \item Mesurer la qualité des prédictions du modèle
     \item Évaluer si un modèle peut remplir un objectif métier
-    \item Se protéger des régressions après mise à jour
+    \item Se protéger des régressions (détériorations) après mise à jour
   \end{itemize}
 \end{frame}
 
