--- a/shared/latex/unsupervised/clustering/conclusion.tex
+++ b/shared/latex/unsupervised/clustering/conclusion.tex
@@ -1,7 +1,7 @@
 
 \begin{frame}
   \frametitle{Conclusion}
-   \V{"img/clustering-methods-problems-illustration" | image("tw", 1.0)}
+   \V{"img/clustering-methods-problems-illustration" | image("th", 0.7)}
 \end{frame}
 
 \begin{frame}
