Have the link to the full pdf course only in one section and update it
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/intro/intro.tex
+++ b/shared/latex/python/intro/intro.tex
@@ -89,8 +89,8 @@
 \begin{frame}{Ressources}
   \begin{itemize}
     \item \bluelink{https://docs.python.org/fr/3/}{Documentation officielle Python}
+    \item \bluelink{https://stackoverflow.com/questions/tagged/python}{Stack Overflow}
     \item \bluelink{https://www.reddit.com/r/learnpython/}{Reddit (forum) d'apprentissage de Python}
-    \item \bluelink{https://github.com/nzmognzmp/langage-python/releases/tag/1.0.1}{Support de cours, télécharger le pdf}
     \item \bluelink{http://pythontutor.com/}{Python Tutor}
   \end{itemize}
 \end{frame}
