Tweak small things for NPY
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/basics/control-structures.tex
+++ b/shared/latex/python/basics/control-structures.tex
@@ -5,7 +5,7 @@
 
   Nous  verrons plus tard qu'il existe aussi une structure \texttt{try}/\texttt{except} pour la gestion d'erreurs.
 
-  Il existe aussi une instruction \texttt{match} depuis Python 3.10 mais ce n'est pas encore une version stable.
+  Il existe aussi une instruction \texttt{match} depuis Python 3.10 mais non traitée ici car trop compliquée.
 \end{frame}
 
 \begin{frame}{Structure conditionnelle}
