Simplify LIME link
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/mlops/technics/xai/lime.tex
+++ b/shared/latex/mlops/technics/xai/lime.tex
@@ -40,7 +40,7 @@
 \end{frame}
 
 \begin{frame}{Implémentation}
-  En Python, le paquet \bluelink{https://github.com/marcotcr/lime/tree/master}{\texttt{lime}} contient tout le nécessaire.
+  En Python, le paquet \bluelink{https://github.com/marcotcr/lime/}{\texttt{lime}} contient tout le nécessaire.
 \end{frame}
 
 \begin{frame}{Limitations}
